--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -1,9 +1,15 @@
 <!-- load dataset analytics (analysis.html) after clicking analyticsloader button -->
 <section class="analytics">
+    
     <li>
-        <ul>Total incidents: {{totalincidents}}</ul>
-        <ul>Number of attacks on corporate industry: {{corporateattacks}}</ul>
-        <ul>Number of attacks on military forces: {{militaryattacks}}</ul>
+        <ul>Total recorded incidents: {{totalincidents}}</ul>
+        <ul>Number of attacks on corporate industry: {{corporateattacks}} ({{corporateattackspercent}}% of total recorded incidents)</ul>
+        <ul>Number of attacks on military forces: {{militaryattacks}} ({{militaryattackspercent}}% of total recorded incidents)</ul>
+        {% load static %}
+        <ul>Annual chart (Total incidents recorded each year)<img src="{% static 'images/incidents_per_year.png' %}" alt="Annual incidents"></ul>
+        {% load static %}
+        <ul>Monthly chart (total incidents recorded each month grouped by receiver continent)<img src="{% static 'images/continent_incidents_per_month.png' %}" alt="Monthly continent victims"></ul>
+        <p>Disclaimer: Data recorded by European Repository of Cyber Incidents (EuRepoC)</p>
     </li>
 </section>
 <section class="mappopup">
