changed map size

--- a/templates/map.html
+++ b/templates/map.html
@@ -3,6 +3,6 @@
 <link rel="stylesheet" href="{% static 'css/map.css' %}">
 <!-- map img -->
 {% load static %}
-<img src="{% static 'images/continents_map.svg' %}" alt="Continents_map">
+<img src="{% static 'images/continents_map.svg' %}" alt="Continents_map" style="max-width: 50%;">
 <br>
 
