--- a/templates/map.html
+++ b/templates/map.html
@@ -1,9 +1,6 @@
 <!-- map img -->
 <div id="map-container">
     <!-- Render svg with clickable feature to open continents.html-->
-    <object type="image/svg+xml" data="{{ continents|safe }}" >
-        Your browser does not support SVG
-    </object>
+    {{ continents|safe }}
 </div>
-<br>
 
