--- a/templates/map.html
+++ b/templates/map.html
@@ -1,6 +1,7 @@
 <!-- map img -->
 <div id="map-container">
     <!-- Render svg with clickable feature to open continents.html-->
-    {{ continents|safe }}
+     {% load static %}
+    <embed type="image/svg+xml" src="{% static 'images/continents_map.svg' %}"/>
 </div>
 
