--- a/static/css/map.css
+++ b/static/css/map.css
@@ -1,6 +1,7 @@
 #map-container{
-    width: 50%;
+    width: 90%;
     height: 20%;
+
     /* svg a:hover path {
         fill: #ff9800 !important;
         cursor: pointer;
@@ -9,4 +10,12 @@
 #map-container object{
     width:100%;
     height:50%;
+}
+.hidden {
+    display: none;
+}
+#closePopup {
+    cursor: pointer;
+    float: right;
+    font-size: 18px;
 }
