--- a/templates/continent.html
+++ b/templates/continent.html
@@ -7,11 +7,11 @@
             <ul>Total recorded incidents: {{ continenttotal }} ({{ continenttotalpercent }}% of the total global incidents)</ul>
             <ul>Number of attacks on corporate industry: {{ continentcorporate }} ({{ continentcorporatepercent }}% of attacks in the continent)</ul>
             <ul>Number of attacks on military forces: {{ continentmilitary }} ({{ continentmilitarypercent }}% of attacks in the continent)</ul>
-            <ul>Total incidents chart (Organised by incident type) {{ continentattacktypesvg }}</ul>
-            <ul>Attackers located: continentattackers</ul>
-            <ul>Attack entry chart </ul>
-            <ul>Percentage of incidents received a political response: continentpoliticresponse %</ul>
+            <ul>Total incidents chart (Organised by incident type): {{ continentattacktypesvg }}</ul>
+            <ul>Attacker location chart: {{ continentattackerlocationsvg }}</ul>
+            <ul>Attack entry chart (most organisations unlikely to share vulnerability hence the low count): {{continentmitreaccesssvg}} </ul>
             <ul>Total calculated intensity: continentweight</ul>
+            <ul>What was impacted? continentmitreimpactsvg </ul>
         </li>
     </div>
 </section>
