--- a/templates/continent.html
+++ b/templates/continent.html
@@ -10,8 +10,8 @@
             <ul>Total incidents chart (Organised by incident type): {{ continentattacktypesvg }}</ul>
             <ul>Attacker location chart: {{ continentattackerlocationsvg }}</ul>
             <ul>Attack entry chart (most organisations unlikely to share vulnerability hence the low count): {{continentmitreaccesssvg}} </ul>
-            <ul>Total calculated intensity: continentweight</ul>
-            <ul>What was impacted? continentmitreimpactsvg </ul>
+            <ul>Total calculated intensity: {{ continenttotalintensity }}</ul>
+            <ul>What was actually impacted in the attack according to the MITRE ATT&CK framework: {{ continentmitreimpactsvg }}</ul>
         </li>
     </div>
 </section>
