--- a/static/css/map.css
+++ b/static/css/map.css
@@ -1,25 +1,119 @@
+html {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: solid 5px black;
+}
+h1, h2, p, li, label, button, title {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 h1 {
-    color: brown;
+    color: black;
+    padding-left: 10%;
 }
-
-#map-container{
+/* header section styles */
+.header {
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    max-height: 10%;
+}
+#header-content {
+    display: flex;
+    align-items: center;
     width: 90%;
-    height: 20%;
-
-    /* svg a:hover path {
-        fill: #ff9800 !important;
-        cursor: pointer;
-    } */
+    background-color: rgb(194, 255, 249);
+    border-top: solid 3px black;
+    border-bottom: solid 3px black;
+    h1 {
+        padding-left: 1%;
+    }
 }
-#map-container object{
+#logo{
+    width: 50%;
+    height: 50%;
+}
+#logo-holder {
+    display: flex;
+    justify-content: center;
+    width: 20%;
+}
+.header-line {
+    width: 90%;
+    border-bottom: 2px solid black;
+}
+/* main section styles */
+.main {
+    position: relative;
+}
+.map-forms, .map-analytics{
+    display: flex;
+    justify-self: center;
+    width: 70%;
+}
+.map-forms{
+    width: 70%;
+    flex-flow: column wrap;
+    justify-content: center;
+    margin-top: 2%;
+    padding: 3%;
+    background-color: rgb(149, 249, 239);
+    border-top: solid 1px black;
+    border-bottom: solid 1px black;
+}
+#filterform, #button-show, #continentlist {
+    border: dotted 2px black;
+}
+#filterform {
+    display: flex;
+    justify-self: right;
+}
+#button-show {
+    width: 80%;
+    height: 20%;    
+    display: flex;
+    justify-content: space-evenly;
+    align-self: center;
+}
+button {
+    background-color: white;
+    cursor: pointer;
+}
+#continentlist{
+    display: flex;
+    flex-flow: row wrap;
+    order: 1;
+}
+.radio-list {
+    padding: 1% 3%;
+}
+
+
+.mappopup{
+    position:fixed;
+    top: 20%;
+    left: 10%;
+    width: 50%;
+    height: 70%;
+    border-style: solid;
+    background-color: white;
+    z-index: 10;
+    overflow: auto;
+}
+.mappopup svg{
+    width: 80%;
+}
+#popupContent {
+    display: flex;
+}
+
+#map{
+    width: 100%;
+}
+#map object{
     width:100%;
-    height:50%;
 }
 .hidden {
     display: none;
-}
-
-#mappopup {
-    width: 40%;
-    border-style: solid;
 }
