--- a/templates/map.html
+++ b/templates/map.html
@@ -1,5 +1,5 @@
 <!-- map img -->
-<div id="map-container">
+<div id="map">
     <!-- Render svg with clickable feature to open continents.html-->
     {{ map }}
 </div>
