--- a/templates/filter.html
+++ b/templates/filter.html
@@ -1,11 +1,13 @@
 <!-- filter post form -->
     <form method="get" action="" id="filterform">
         <h2>Data range</h2>
-        {% csrf_token %}
-        <label for="startdate">Start</label>
-        <input type="date" name="startdate" value="{{startdate}}">
-        {% csrf_token %}
-        <label for="enddate">End</label>
-        <input type="date" name="enddate" value="{{enddate}}">
+        <div id="filter-content">
+            {% csrf_token %}
+            <label for="startdate">Start</label>
+            <input type="date" name="startdate" value="{{startdate}}">
+            {% csrf_token %}
+            <label for="enddate">End</label>
+            <input type="date" name="enddate" value="{{enddate}}">
+        </div>
         <button type="submit">filter</button>
     </form>
