--- a/templates/index.html
+++ b/templates/index.html
@@ -11,35 +11,51 @@
     <title>Cartobreach</title> 
 </head> 
 <body>
-    <h1>Welcome to Cartobreach</h1>
-    <!-- Button to load map and hide map-->
-    <form method="post" action ="" id="mapshow">
-        {% csrf_token %}
-        <input type="hidden" name="mapload" value="map.html">
-        <button type="submit">Load map</button>
-    </form>
-    <!-- Button to load analytics section (visually on the right of map)-->
-    <form method="post" action ="" id="analysisshow">
-        {% csrf_token %}
-        <input type="hidden" name="mapanalytics" value="analysis.html">
-        <button type="submit">Load analytics</button>
-    </form>
-    <form method="get" action="{{ index }}" id="continentlist">
-        {% for continent in continentlist %}
-            <label for id="{{ continent.getNameMap }}">{{ continent.getName }}</label>
-            <input type="radio" name="continent" id="{{ continent.getNameMap }}" value="{{ continent.getName }}">
-        {% endfor %}
-        <button type="submit">Load continent</button>
-    </form>
-    {% include "filter.html" %}
-    <!-- load map (map.html) after clicking maploader button -->
-    {% if mapload %}
-        {% include mapload %}
-    {% endif %}
-    <!-- load map analytics (analysis.html)-->
-    {% if mapanalytics %}
-        {% include mapanalytics %}
-    {% endif %}
+    <div class="header">
+        <div id="header-content">
+            {% load static %}  
+            <div id="logo-holder"><img src="{% static 'images/Cartobreach_Logo.png' %}" alt="Cartobreach logo" id="logo"></div>
+            <h1>Welcome to Cartobreach</h1>
+        </div>
+    </div>
+    <div class="main">
+        <section class="map-forms">
+            <div id="button-show">
+            <!-- Button to load map and hide map-->
+                <form method="post" action ="" id="mapshow">
+                    {% csrf_token %}
+                    <input type="hidden" name="mapload" value="map.html">
+                    <button type="submit">Load map</button>
+                </form>
+                <!-- Button to load analytics section (visually on the right of map)-->
+                <form method="post" action ="" id="analysisshow">
+                    {% csrf_token %}
+                    <input type="hidden" name="mapanalytics" value="analysis.html">
+                    <button type="submit">Load analytics</button>
+                </form>
+            </div>
+            <form method="get" action="{{ index }}" id="continentlist">
+                {% for continent in continentlist %}
+                <div class="radio-list">
+                    <label for id="{{ continent.getNameMap }}">{{ continent.getName }}</label>
+                    <input type="radio" name="continent" id="{{ continent.getNameMap }}" value="{{ continent.getName }}">
+                </div>
+                {% endfor %}
+                <button type="submit">Load continent</button>
+            </form>
+            {% include "filter.html" %}
+        </section>
+        <section class="map-analytics">
+            <!-- load map (map.html) after clicking maploader button -->
+            {% if mapload %}
+                {% include mapload %}
+            {% endif %}
+            <!-- load map analytics (analysis.html)-->
+            {% if mapanalytics %}
+                {% include mapanalytics %}
+            {% endif %}
+        </section>
+    </div>
     <!-- include continent.html (as pop up) if continent GET value known -->
     {% if continent %}
         {% include "continent.html" %}
